Revision history for Perl extension App::Info.

0.44
      - Yet another fix for test failures on Win32.

0.43  2004-12-14T19:45:52
      - Added "search_*_name" parameters and methods for searching for
        PostgreSQL and Apache executables other than the main one,
        which is already handed by "search_exe_names".
      - Fixed "apache.t", "iconv.t", "postgres.t", and "sqlite3.t" tests
        on Win32.

0.42  2004-12-07T00:40:53
      - Fixed last Win32 test failure in "apache.t".
      - Added "executable()" method to return the main executable of an app or
        library, if there is one.
      - Added other executable methods to App::Info::RDBMS::PostgreSQL,
        including "postgres()", "createdb()", "createuser()", and others.
      - Added other executable methods to App::Info::HTTPD::Apache,
        including "ab()", "apachectl()", "apxs()", and others.
      - Changed behavior of App::Info::HTTPD::Apache->bin_dir to just return
        the name of the directory in which the httpd executable is stored,
	rather than a possible "bin" directory under the httpd_root.

0.41  2004-11-28T20:01:57
      - Fixed Apache, SQLite, and Iconv tests to pass under Win32.
      - Fixed "bin_dir()" method for Apache module to return the same
        directory as "httpd_root()" on Win32.

0.40  2004-11-27T19:45:01
      - Eliminated "Odd number of elements in hash assignment" warning when
        creating an App::Info::Handler::Prompt object.
      - Changed SQLite event messages to simply refer to "SQLite" instead
        of "sqlite3 or sqlite".
      - Added new parameters to "new()", along with accompanying accessors to
        collect their values: "search_exe_names", "search_bin_dirs",
        "search_lib_names", "search_so_lib_names", search_lib_dirs",
        "search_inc_names", and "search_inc_dirs". These are array references,
        and their values are used to search for application files on the local